[package]
name = "ngx_l402"
version = "1.2.4"
edition = "2021"

[lib]
name = "ngx_l402_lib"
crate-type = ["cdylib"]
test = false
doctest = false

[dependencies]
ngx = { git = "https://github.com/nginx/ngx-rust", branch = "master" }
l402_middleware = "=2.2.1"
tokio = { version = "1.33.0", features = ["full"] }
futures = "0.3"
serde_json = "1.0"
reqwest = { version = "0.12.12", features = ["blocking"] }
tonic_openssl_lnd = "0.2.0"
once_cell = "1.20.3"
cdk = { version = "0.14.1", features = ["wallet"] }
cdk-sqlite = { version = "0.14.1", features = ["wallet"] }
base64 = "0.22.1"
rand = "0.9.0"
bip39 = { version = "2.1.0", features = ["rand"] }
redis = { version = "0.32.2", features = ["r2d2"] }
r2d2 = "0.8"
macaroon = "0.3.0"
log = "0.4"
env_logger = "0.11"
chrono = "0.4"
blake3 = "1.5"
ciborium = "0.2.2"
sha2 = "0.10"
hex = "0.4"
cln-rpc = "0.4.0"
lightning = "0.0.125"
tonic = "0.7"

[features]
default = []
export-modules = []
