[package]
name = "ngx-l402-stress-test"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "stress-test"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["rustls-tls"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hdrhistogram = "7"
sysinfo = "0.33"
